[gd_scene load_steps=5 format=3 uid="uid://b312ry8fx8hlf"]

[ext_resource type="Script" path="res://Scripts/placement_point.gd" id="1_ohj7d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_f4el8"]
resource_local_to_scene = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_do4a2"]
transparency = 1
albedo_color = Color(0.556863, 0.929412, 0.27451, 0.721569)

[sub_resource type="SphereMesh" id="SphereMesh_rl7kl"]
material = SubResource("StandardMaterial3D_do4a2")

[node name="Placement Point" type="Area3D"]
script = ExtResource("1_ohj7d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_f4el8")

[node name="HoverVisualizer" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_rl7kl")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
